--- a/themes/_ss/style.css
+++ b/themes/_ss/style.css
@@ -1,5 +1,5 @@
 /*
-Theme Name: _ss
+Theme Name: _ss-r
 Theme URI: http://underscores.me/
 Author: Automattic
 Author URI: http://automattic.com/
@@ -517,7 +517,7 @@ article img {
 #page {
 	padding: 0;
     margin: 0;
-    background: #F9F8F6; /*#F7F6F4 #F7F5F1*/
+    background: #feffff/*#F9F8F6*/; /*#F7F6F4 #F7F5F1*/
 }
 
 
@@ -528,12 +528,13 @@ article img {
 }
 #content {
 	background: #feffff/*#FCFAF9*/;
+    margin-top: 3em;
 }
 .fix #primary,
 .member #primary,
 .single-member #primary {
 	//min-height: 800px;
-    margin-top: 8.5em;
+    //margin-top: 8.5em;
 }
 
 
@@ -543,11 +544,12 @@ article img {
 	margin: 0;
     padding: 0;
     width: 100%;
+    background: #efefef;
     //background: rgba(255,255,255,0.3)/* #EDECE8*//*rgba(255,255,255,0.93)*//*rgba(1,142,189,1.0)*/; /* #009CDF #018EBD */
-   	position: fixed;
+   	position: relative;
     z-index: 9999;
-   	//border-top: 1px solid #009CDF; 
-    box-sizing: content-box;
+   	border-top: 3px solid #414141; 
+    box-sizing: border-box;
     //-webkit-transition: all ease-in .2s;
     //transition: all ease-in .2s;
     //padding: 0.6em 0;
@@ -555,10 +557,17 @@ article img {
     //position: relative;
 }
 .wrap-head {
+	background: url(images/tile-dot.png), #0094DE;
+    margin-bottom: 7px;
     //height: 60px;
     //border-bottom: 1px solid #ddd;
     -webkit-transition: all ease-in-out .2s;
     transition: all ease-in-out .2s;
+}
+.about .site-header,
+.about .wrap-head {
+	background: none;
+    border-color: transparent;
 }
 .top .site-header {
 	display: none;
@@ -566,7 +575,8 @@ article img {
 .site-branding {
 	width: 1000px;
     margin: auto;
-    padding: 15px 0;
+    padding: 0 0 3px;
+    
     //float: left;
     //border: 1px solid red;
     //background: #fff;
@@ -599,7 +609,7 @@ article img {
     //top: 5.5em;
     padding: 0;
     text-align: center;
-    //margin-top: 15px;
+    margin: 1em 0;
     //z-index: 10000;
     //border: 1px solid green;
 	//float: left;
@@ -650,10 +660,10 @@ article img {
 	display: inline-block;
 	list-style: none;
 	padding: 0.1em 0;
-    background: rgba(255,255,255,0.7);
+    //background: rgba(255,255,255,0.8);
     overflow: hidden;
-    padding: 0.2em 0 0.3em;
-    border-radius: 20px;
+    //padding: 0.2em 0 0.3em;
+    //border-radius: 20px;
 }
 .main-navigation ul:after {
 	display: block;
@@ -664,15 +674,23 @@ article img {
 .main-navigation li {
 	position: relative;
 	float: left;
-    width: 140px;
-    height: 22px;
+    width: 138px;
+	height: 42px;
+    line-height: 42px;
     text-align: center;
-    font-size: 0.9em;
-    font-weight: bold;
+    font-size: 0.95em;
+    //font-weight: bold;
     margin-right: 0;
+    border: 2px solid #404040;
+    //padding: 1em 0;
+    border-width: 2px 2px 2px 0;
+    background: rgba(255,255,255,0.85);
+    -webkit-transition: all ease-in .2s;
+    transition: all ease-in .2s;
 }
 .main-navigation li:first-of-type {
 	width: 150px;
+    border-left: 2px solid #404040;
 }
 
 .main-navigation a {
@@ -680,10 +698,10 @@ article img {
     //font-weight: bold;
     font-family: sans-serif;
 	text-decoration: none;
-    color: #fff;
+    color: #000;
 }
-.main-navigation a:hover {
-	color: #ccc;
+.main-navigation li:hover {
+	background: #E8EEF3;
 }
 
 
@@ -692,7 +710,7 @@ article img {
     //padding: 0 2.5em;
     position: absolute;
     z-index: 10001;
-    top: 0;
+    top: 6px;
     left: 0;
     //float: left;
 	width: 100%;
@@ -723,28 +741,28 @@ article img {
     z-index: 9999;
     display: block;
 	width: 100%;
-    //height: 26px;
+    height: 26px;
     line-height: 26px; /* tyousei */
     cursor: pointer;
-    font-weight: bold;
     font-size: 1.0em;
-    font-weight: bold;
+    //font-weight: bold;
     //background: rgba(255,255,255,0.3);
-    //border: 1px solid #fff;
+    //border: 1px solid red;
     //padding: 5px 0;
     //border-width: 1px 0 1px 1px;
 }
 span.st {
 	//background: #43A9BC;
-    color: #999;
-    bottom: -14px; /* tyousei */
+    color: #353535;
+    bottom: -13px; /* tyousei */
+    //top: -20px;
     left: 0;
     -webkit-transform: rotateX(-90deg);
     transform: rotateX(-90deg)/* rotateY(180deg)*/;
 }
 span.ft {
 	//background: #555;
-    color: #3f3f3f;
+    color: #000;
  	top: 0;
     left: 0;
     -webkit-transform: translateZ(14px);
@@ -754,11 +772,22 @@ span.ft {
 	opacity: 0;
 }
 .main-navigation li:hover div {
-	-webkit-transform: rotateX(450deg);
-    transform: rotateX(450deg)/* rotateZ(360deg)*/;
+	-webkit-transform: rotateX(465deg);
+    transform: rotateX(465deg)/* rotateZ(360deg)*/;
     //transform: rotateX(-90deg);
 }
-
+.main-navigation li div span.st .fa {
+	color: #444;
+    margin-right: 0.3em;
+}
+.main-navigation li div span.ft .fa {
+	display: none;
+    margin-right: 0.2em;
+    color: #72BBF3;
+}
+.main-navigation li div.crnt span.ft .fa {
+	display: inline;
+}
 .main-navigation li.curr div {
 	//color: #fff;
 	-webkit-transform: rotateX(-100deg);
@@ -767,6 +796,29 @@ span.ft {
 .main-navigation .curr span {
 	cursor: default;
 }
+
+/* IE */
+.main-navigation li:hover span.ft { /* IE9-10 */
+	opacity: 0.5\0/;
+}
+@media all and (-ms-high-contrast:none) { /* IE11 */
+	.main-navigation li:hover span.ft {
+		opacity: 0.5;
+	}
+    .main-navigation li:hover div {
+    	transform: none/* rotateZ(360deg)*/;
+	}
+}
+@supports (-ms-accelerator:true) { /* Edge */
+	.main-navigation li:hover span.ft {
+        opacity: 1;
+    }
+	.main-navigation li:hover div {
+    	transform: none/* rotateZ(360deg)*/;
+	}
+}
+
+
 
 
 /* Small menu. */
@@ -835,6 +887,7 @@ body.home {
     left: 40%;
     z-index: 9999;
     text-align: center;
+    //border: 1px solid red;
 }
 .ctr img {
 	margin-bottom: 15px;
@@ -846,7 +899,7 @@ body.home {
     -webkit-animation: beat 2.7s linear 1s infinite normal forwards;
     animation: beat 2.7s linear 1s infinite normal forwards;
 }
-@-webkit-keyframes scale {
+@-webkit-keyframes beat {
 	7% {
     	-webkit-transform: scale(1.3);
     }
@@ -880,9 +933,56 @@ body.home {
     	transform: scale(1);
     }
 }
+@-webkit-keyframes showHide {
+	0% {
+    	opacity: 0;
+    }
+    50% {
+    	opacity: 1;
+    }
+    100% {
+    	opacity: 0;
+    }
+}
+@keyframes showHide {
+    0% {
+    	opacity: 0;
+    }
+    50% {
+    	opacity: 1;
+    }
+    100% {
+    	opacity: 0;
+    }
+}
 
 
 /* Video */
+/*html {*/
+/*	background: #038CD3;*/
+/*}*/
+.load {
+	width: 100%;
+    height: 100%;
+    position: relative;
+    z-index: 999;
+    background: #038CD3;
+    //background: url(images/tile-dot.png), #0094DE;
+}
+.load .ent {
+	position: absolute;
+    //top: 50%;
+    //left: 50%;
+    color: #fff;
+    font-size: 2.5em;
+    width: 45px;
+    height: 45px;
+    opacity: 0;
+    z-index: 1000;
+    //border: 1px solid red;
+    -webkit-animation: showHide 1.2s linear 0.1s infinite normal forwards;
+    animation: showHide 1.2s linear 0 infinite normal forwards;
+}
 .wrap-cal {
 	width: 100%;
     position: fixed;
@@ -907,11 +1007,11 @@ body.home {
     //min-width: 1000px;
     height: auto;
     padding: 0;
-	background: url(images/filter-3.png), rgba(0,0,0,0.8);
+	background: url(images/filter-3.png), rgba(0,0,0,0.9);
 }
 .cal img {
 	width: 100%;
-    opacity: 0.93;
+    opacity: 1;
 }
 img.agif {
 	//display: none;
@@ -926,6 +1026,7 @@ img.agif {
     opacity: 0.88;
     margin: 0;
     padding: 0;
+    display: none;
     //position: absolute;
     //top: 0;
     //left: 0;
@@ -1110,14 +1211,16 @@ img.agif {
 }
 
 
-
-
-
 /* page */
-
-.fix #content,
-.member #content,
-.single-member #content {
+.page-cal {
+	width: 1000px;
+    margin: 1.5em auto;
+}
+.page-cal img {
+	width: 100%;
+    height: 400px;
+}
+.about #content {
 	position: absolute;
     z-index: 999;
     top: 700px;
@@ -1126,23 +1229,22 @@ img.agif {
     margin: -0.5em 0 0;
     //border: 1px solid red;
 }
-.fix #primary,
-.member #primary,
-.single-member #primary {
+.about #primary {
 	margin-top: 4em;
     position: relative;
     z-index: 9999;
 }
-.fix h1.entry-t,
-.member h1.entry-t {
+.fix h1.entry-title,
+.members h1.entry-title,
+.allpost h1.entry-title {
 	//display: none;
-	font-size: 3.3em;
+	font-size: 2em;
     letter-spacing: 0.1em;
-    color: #fff/*#0094DE*/;
-    position: fixed;
-    top: 370px;
-    left: 15%;
-    z-index: 100;
+    //color: red/*#0094DE*/;
+/*    position: fixed;*/
+/*    top: 370px;*/
+/*    left: 15%;*/
+/*    z-index: 100;*/
     //text-shadow: 1px 1px 3px #616161;
 }
 
@@ -1191,13 +1293,24 @@ img.agif {
 	
 }
 
+.recruit section img {
+	width: 45%;
+}
 
+.greeting section span {
+	font-size: 4em;
+}
 
 
 /* member */
-.member article {
+.members .page-header {
+	margin-bottom: 2em;
+}
+.members h2 {
+	margin-top: 2em;
+}
+.members article {
 	//border: 3px solid greenyellow;
-    margin-bottom: 2em;
     position: relative;
     z-index: 998;
     float: left;
@@ -1211,21 +1324,21 @@ img.agif {
     padding: 10px;
     background: url(images/wave-tile-gray.png), linen;
 }
-.member article:nth-of-type(3n) {
+.members article:nth-of-type(3n) {
 	margin-right: 0;
 }
-.member article a {
+.members article a {
 	display: block;
     padding: 5px;
     color: #404040;
     background: #fff;
     //border: 1px solid red;
 }
-.member article h2 {
+.members article h3 {
 	font-size: 1.1em;
     font-weight: normal;
 }
-.member article span {
+.members article span {
 	display: block;
     position: absolute;
     font-size: 2em;
@@ -1243,12 +1356,12 @@ img.agif {
     z-index: 999;
 }
 
-.member .wrap-img {
+.members .wrap-img {
 	//overflow: hidden;
     height: 175px;
     
 }
-.member article img {
+.members article img {
 	//border-radius: 0.5em;
     margin-right: 2em;
     vertical-align: top;
@@ -1261,25 +1374,201 @@ img.agif {
     //border: 4px solid #fff;
     
 }
-.member article a img {
+.members article a img {
     position: relative;
     z-index: 9999;
 	-webkit-transition: all linear .2s;
     transition: all ease-out 0.2s;
 }
-.member article:hover {
+.members article:hover {
 	//border: 2px dashed tomato;
 }
-.member article a:hover .wrap-img {
+.members article a:hover .wrap-img {
 	overflow: visible;
 }
-.member article a:hover img {
+.members article a:hover img {
 	transform: rotateZ(374deg) scale(1.3) translateZ(20px);
 
 }
 
+.single-member section.message {
+	position: relative;
+	border: none;
+    padding: 0;
+    height: 330px;
+    overflow: hidden;
+    //border: 1px solid red;
+}
+.single-member .message:after {
+	display: block;
+    clear: both;
+    content: 0;
+    height: 0;
+}
+.single-member .message img {
+	display: inline-block;
+	width: 55%;
+    border: none;
+    padding: 0;
+    background: none;
+    float: left;
+    vertical-align: top;
+    margin: 0;
+}
+.single-member .message div {
+	width: 45%;
+    float: left;
+    margin: 0;
+    padding: 1.2em;
+    //border: 1px solid red;
+    background: #009CDF;
+    color: #fff;
+    height: 100%;
+    margin-top: -1.5em;
+    text-align: right;
+}
+.single-member .message div h2 {
+	clear: none;
+	margin: 0;
+    padding: 0;
+}
+.single-member .prof {
+	border: none;
+}
+.single-member .prof img {
+	display: block;
+	width: 40%;
+    float: left;
+    border: none;
+    background: none;
+    padding: 0;
+    margin: 0;
+}
+.single-member .prof img + div {
+	width: 59%;
+    padding: 0 1.2em;
+    //background: blue;
+    //color: #fff;
+	float: right;
+    //border: 1px solid red;	
+}
+.single-member .prof img + div h3 {
+	margin: 0;
+    padding: 0;
+    font-size: 1.5em;
+}
+
+.allpost .wrap-blog,
+.single-post .wrap-blog {
+	width: 1000px;
+    margin: auto;
+}
+.allpost #primary,
+.single-post #primary {
+	width: 68%;
+    float: left;
+    //border: 1px solid red;
+}
+
+.allpost #secondary,
+.single-post #secondary {
+	width: 26%;
+    float: right;
+    margin-top: 5em;
+}
+.allpost .page-title {
+	margin-bottom: 2em;
+}
+.allpost article {
+	margin-bottom: 3em;
+    padding-bottom: 3em;
+    border-bottom: 1px dotted #aaa;
+}
+.allpost article:after {
+	display: block;
+    clear: both;
+    content: "";
+    height: 0;
+}
+.allpost .wrap-thumb {
+	width: 30%;
+    max-height: 170px;
+    float: left;
+    margin-right: 1.2em;
+    overflow: hidden;
+    
+}
+
+.author-post {
+	margin-top: 3em;
+    border-top: 1px dotted #aaa;
+}
+.author-post article {
+	width: 32%;
+    float: left;
+    margin-right: 2%;
+    border: 5px solid #ccc;
+    padding: 0;
+}
+.author-post article > a {
+	display: block;
+    padding: 0.5em;
+}
+.author-post article:last-of-type {
+	margin-right: 0;
+} 
+.author-post .wrap-thumb {
+	overflow: hidden;
+    height: 150px;
+}
+.allpost .wrap-thumb img,
+.author-post .wrap-thumb img {
+	border: 0;
+    padding: 0;
+    background: none;
+	-webkit-transition: all linear .2s;
+    transition: all linear .2s;
+}
+.allpost article a:hover img,
+.author-post a:hover img {
+	-webkit-transform: rotateZ(12deg) scale(1.4);
+	transform: rotateZ(12deg) scale(1.4);
+}
+.allpost .entry-header,
+.allpost .entry-content {
+	width: 66%;
+    float: left;
+}
+.allpost .entry-header h2 {
+	margin: 0;
+    padding: 0;
+}
+.author-single {
+	margin-bottom: 2.5em;
+}
 
 
+
+
+.widget-area ul {
+	margin-left: 1.2em;
+    padding-left: 0;
+}
+.widget-area li {
+	margin-left: 0;
+    padding-left: 0;
+}
+.widget-title {
+	font-size: 1.1em;
+    color: #606060;
+}
+
+.allpost .nav-links {
+	text-align: right;
+}
+.allpost .page-numbers {
+	margin-left: 0.4em;
+}
 
 /* Footer */
 #colophon {
@@ -1310,7 +1599,7 @@ img.agif {
 	//float: right;
     color: #fff;
     width: 280px;
-    opacity: 0.95;
+    opacity: 1;
     margin: 2em auto 1em;
     //border: 1px solid red;
 }
@@ -1326,7 +1615,7 @@ img.agif {
 }
 .site-info address p {
 	float: right;
-    font-weight: bold;
+    //font-weight: bold;
     text-align: left;
 }
 #colophon > div:last-of-type {
